fixed spacing

--- a/css.css
+++ b/css.css
@@ -69,7 +69,16 @@ li {
 }
 
 .checkbox {
-	vertical-align: center;
+	position: relative;
+	top: 3px;
+	margin-right: 6px;
+	vertical-align: middle !important;
+	float: left;
+}
+
+.real-question-text {
+	overflow: hidden;
+	display: block;
 }
 
 .button:hover {
